2022-12-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator: Now generates enum descriptions
	* Fixed several codes according to Rubocop warnings

2022-12-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Converted DrawModelEx into a wrapper function of rbDrawModelEx to avoid Matrix problem found in models_animation sample
	* Attach functions with an explicit name - Ref.: https://www.rubydoc.info/github/ffi/ffi/FFI%2FLibrary:attach_function
	* setup_xxx_symbols: name, retval and arguments of one function are now packed into one line
	* generator: Now imports descriptions from original API schema
	* Generated with the latest raylib ( https://github.com/raysan5/raylib/commit/03cc540d5f1df71bd7ad8118d0e11b492fa5cc18 )

2022-12-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Experimental Linux (Chromebook) support

2022-12-10  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Pulled latest raylib ( https://github.com/raysan5/raylib/commit/2c9d116a5ce835328dc3267313f1b34b2e7ad8c9 ) / and raygui ( https://github.com/raysan5/raygui/commit/64179558e425f6e05054d2a70eb12530e0fec103 )
	* [Windows] Updated DLLs with the latest raylib
	* example/rlgl_compute_shader.rb: Fixed API usage

2022-10-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Pulled latest raylib ( https://github.com/raysan5/raylib/commit/483f10397ee37ba551e57bad563a846f2dc5bb5b ) / and raygui ( https://github.com/raysan5/raygui/commit/d981abebd8f36dea9a297b2158b529ad8bf76a69a )
	* [Windows] Updated DLLs with the latest raylib

2022-10-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Pulled latest raylib ( https://github.com/raysan5/raylib/commit/c5e89241c515d12a739a0d0bacb6a05395bf2a95 ) / and raygui ( https://github.com/raysan5/raygui/commit/98df231227d87dbf5954520169af29e610cd6a87 )
	* example/models_loading_m3d.rb: Added
	* example/models_loading_gltf.rb: Fixed model paths
	* [Windows] Updated DLLs with the latest raylib

2022-08-28  vaiorabbit  <http://twitter.com/vaiorabbit>
